--- a/about.html
+++ b/about.html
@@ -8,10 +8,27 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
+  <LINK rel="index" href="index.html">
 
 </head>
 
 <body>
+    <header>
+        <div class="headerContainer">
+        <div class="logo">
+            <img src="img/lambda-black.png">
+        </div>
+        <div class="navBar">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="#">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </nav>
+        </div>
+        </div>
+    </header>
     <div class="container about-page">
      
     About
