--- a/index.html
+++ b/index.html
@@ -7,11 +7,40 @@
   <title>Sprint Challenge - Home</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="index.css">
+  <link rel="logo" href="img/lambda-black.png">
+  <link rel="about" href="about.html">
 
 </head>
 
 <body>
+    <header>
+        <div class="headerContainer">
+            <div class="logo">
+                <img src="img/lambda-black.png">
+            </div>
+                <nav class ="navBar">
+                    <div>
+                    <a href="index.html">Home</a>
+                    </div>
+                    <div>
+                    <a href="about.html">About</a>
+                    </div>
+                    <div>
+                    <a href="#">Products</a>
+                    </div>
+                    <div>
+                    <a href="#">Blog</a>
+                    </div>
+                    <div>
+                    <a href="#">Contact</a>
+                    </div>
+                </nav>
+        </div>
+    </header>
+    <section class="headerImage">
+        <img src="img/jumbo.jpg">
+    </section>
     <div class="container">
    
         <section class="top-content">
