--- a/index.html
+++ b/index.html
@@ -19,23 +19,13 @@
             <div class="logo">
                 <img src="img/lambda-black.png">
             </div>
-                <nav class ="navBar">
-                    <div>
-                    <a href="index.html">Home</a>
-                    </div>
-                    <div>
-                    <a href="about.html">About</a>
-                    </div>
-                    <div>
-                    <a href="#">Products</a>
-                    </div>
-                    <div>
-                    <a href="#">Blog</a>
-                    </div>
-                    <div>
-                    <a href="#">Contact</a>
-                    </div>
-                </nav>
+            <nav class ="navBar"> 
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="#">Products</a>
+                <a href="#">Blog</a>  
+                 <a href="#">Contact</a>
+            </nav>
         </div>
     </header>
     <section class="headerImage">
@@ -59,16 +49,16 @@
             <h2>Why Did It Have To Be Boxes...</h2>
             
             <div class="boxes">
-                <div class="box">Box 1</div>
-                <div class="box">Box 2</div>
-                <div class="box">Box 3</div>
-                <div class="box">Box 4</div>
-                <div class="box">Box 5</div>
-                <div class="box">Box 6</div>
-                <div class="box">Box 7</div>
-                <div class="box">Box 8</div>
-                <div class="box">Box 9</div>
-                <div class="box">Box 10</div>
+                <div class="box" id="box1">Box 1</div>
+                <div class="box" id="box2">Box 2</div>
+                <div class="box" id="box3">Box 3</div>
+                <div class="box" id="box4">Box 4</div>
+                <div class="box" id="box5">Box 5</div>
+                <div class="box" id="box6">Box 6</div>
+                <div class="box" id="box7">Box 7</div>
+                <div class="box" id="box8">Box 8</div>
+                <div class="box" id="box9">Box 9</div>
+                <div class="box" id="box10">Box 10</div>
             </div>
         
         </section>
